--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.1",
+    "github-oauth": "^0.2.2",
     "graphql": "^14.6.0",
     "graphql-depth-limit": "^1.1.0",
     "graphql-resolvers": "^0.4.2",
