--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,23 @@
 version: 2.1
-orbs:
-  node: circleci/node@1.1.6
+description: 'Deploying Node.js Docker to Heroku'
+
 jobs:
   build-and-test:
+    docker:
+      - image: circleci/node:12
     executor:
       name: node/default
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies- # fallback to using the latest cache if no exact match is found
       - node/with-cache:
           steps:
             - run: npm install
             - run: npm test
 workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
+  build-and-test:
+    jobs:
+      - build-and-test
