--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
             - run:
                 command: |
                   if [ "${CIRCLE_BRANCH}" == "master" ]; then
-                    ./.circleci/setup-heroku.sh
+                    sudo ./.circleci/setup-heroku.sh
                     git push heroku HEAD:master
                   fi
 workflows:
