--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   node: circleci/node@1.1.6
+  shellcheck: circleci/shellcheck@1.3.15
 jobs:
   build-and-test:
     executor:
@@ -18,6 +19,9 @@ jobs:
                     git push heroku HEAD:master
                   fi
 workflows:
+  shellcheck:
+    jobs:
+      - shellcheck/check
   build-and-test:
     jobs:
       - build-and-test
