--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "nodemon --watch src --exec babel-node src/app/server.js",
-    "start": "node dist/app/server.js",
+    "start": "npm run build && node dist/app/server.js",
     "test": "jest --runInBand --coverage --verbose",
     "start:test": "cross-env NODE_ENV=test MONGODB_DEBUG=true npm run test:watch",
     "lint": "eslint '**/*.js' --ignore-pattern node_modules/",
@@ -38,7 +38,8 @@
     "morgan": "^1.9.1",
     "password-validator": "^5.0.3",
     "remove": "^0.1.5",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "axios": "^0.19.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -46,7 +47,6 @@
     "@babel/node": "^7.8.4",
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
-    "axios": "^0.19.2",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^25.1.0",
     "cross-env": "^7.0.0",
