--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "nodemon --watch src --exec babel-node src/app/server.js",
-    "start": "npm run build && node dist/app/server.js",
+    "start": "node dist/app/server.js",
     "test": "jest --runInBand --coverage --verbose",
     "start:test": "cross-env NODE_ENV=test MONGODB_DEBUG=true npm run test:watch",
     "lint": "eslint '**/*.js' --ignore-pattern node_modules/",
