--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ TEST_DATABASE_URL=
 SECRET=
 NODE_ENV=
 GRAPHQL_DEPTH_LIMIT=
+GRAPHQL_PLAYGROUND=
+GRAPHQL_INSTROPECTION=
 GITHUB_KEY=
 GITHUB_SECRET=
 MONGODB_DEBUG=
