--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "nodemon --watch src --exec babel-node src/app/server.js",
     "start": "node dist/app/server.js",
+    "start:prod": "cross-env NODE_ENV=production node dist/app/server.js",
     "test": "jest --runInBand --coverage --verbose",
     "start:test": "cross-env NODE_ENV=test MONGODB_DEBUG=true npm run test:watch",
     "lint": "eslint '**/*.js' --ignore-pattern node_modules/",
